--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Chess cmd
 
 on:
   push:
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  
 
     steps:
       - name: Checkout repository
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest coverage
+          pip install flake8 pytest coverage pyinstaller
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with flake8
@@ -37,3 +37,14 @@ jobs:
         run: |
           coverage run -m unittest discover
           coverage report
+
+      - name: Build executable
+        run: |
+          pip install pyinstaller
+          pyinstaller --onefile --name CMDChess main.py
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: executable
+          path: ./dist/CMDChess.exe
