--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -43,7 +43,11 @@ jobs:
           pip install pyinstaller
           pyinstaller --onefile --name CMDChess main.py
 
-      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: executable
+          path: ./dist/CMDChess.exe
 
       - name: Upload release to GitHub
         uses: softprops/action-gh-release@v1
