--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -32,7 +32,10 @@ jobs:
         run: |
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
+          
+      - name: Run unit tests
+        run: python -m unittest discover
+        
       - name: Run unit tests with coverage
         run: |
           coverage run -m unittest discover
